# runtime

./: .gitignore  Cargo.toml  README.md  STABILITY.md
.github/workflows/: prefs-e2e.yml
abi/: check-abi.sh  libpocketforge.v1.abi
bench/: Makefile  README.md  RESULTS.md
bench/input-latency/: inputlat.c
crates/libpocketforge/: Cargo.toml
crates/libpocketforge/src/: lib.rs
crates/pf-broker/: Cargo.toml
crates/pf-broker-ref/: Cargo.toml
crates/pf-broker-ref/src/: main.rs
crates/pf-broker/examples/: step2_transcript.rs
crates/pf-broker/src/: appops.rs  consent.rs  enforce.rs  lib.rs  manifest.rs  serve.rs  tier.rs
crates/pf-broker/tests/: broker.rs  consent_flow.rs  step3_egress_quota.rs
crates/pf-hw-exerciser/: Cargo.toml  README.md
crates/pf-hw-exerciser/src/: evdev.rs  imu.rs  led.rs  main.rs  probe.rs  rumble.rs
crates/pf-input-broker/: Cargo.toml
crates/pf-input-broker/itest/: reader.c  run.sh  source_drive.py
crates/pf-input-broker/src/: broker.rs  evdev.rs  ioc.rs  lib.rs  policy.rs  remap.rs  scm.rs  uinput.rs
crates/pf-prefs/: Cargo.toml  README.md
crates/pf-prefs/src/: error.rs  lib.rs  prefs.rs  schema.rs  store.rs
crates/pf-settings/: Cargo.toml
crates/pf-settings/src/: main.rs
crates/pf-settings/tests/: cli_round_trip.rs  prefs_e2e.rs
crates/pf-settings/tests/common/: mod.rs
crates/pf-wire/: Cargo.toml
crates/pf-wire/src/: lib.rs
crates/pf-wire/tests/: frozen_contract.rs
crates/pocketforge/: Cargo.toml
crates/pocketforge/src/: backend.rs  capability.rs  descriptor.rs  error.rs  input.rs  lib.rs  physical_model.rs  server.rs
crates/pocketforge/src/backends/: broker_client.rs  inproc.rs  mod.rs  scm.rs
crates/pocketforge/src/managers/: audio.rs  egress.rs  egress_log.rs  entropy.rs  input.rs  location.rs  mod.rs  sensors.rs  settings.rs  vibration.rs
crates/pocketforge/tests/: backend_swap.rs  change_event.rs  input_fd.rs  managers.rs  prefs_change_event.rs  taxonomy.rs
crates/pocketforge/tests/common/: mod.rs
crates/pocketforge/tests/fixtures/: README.md  a133-capabilities.toml  a523-capabilities.toml
ctest/: run.sh  smoke.c
docs/: BROKER-DESIGN.md  EGRESS-ENFORCEMENT-SEAM.md  PERMISSION-MODEL.md  PREFERENCES.md  RUNTIME-SDK-SPLIT.md
include/: pocketforge.h
spikes/consent-ui/: DESIGN.md  Makefile  README.md  consent-render.c  driver.py  font8x13.h  run-consent-ui.sh
spikes/consent-ui/baseline/: RESULTS.md  transcript.json  verdicts.txt
spikes/ipc-60hz/: Makefile  README.md  RESULTS.md  bench.c
spikes/ipc-60hz/baseline/: host.txt  res.1m.json  res.default.json  res.samecore.json
spikes/settings-ui/: DESIGN.md  Makefile  README.md  driver.py  ppm2png.py  run-settings-ui.sh  settings-render.c
spikes/settings-ui/baseline/: RESULTS.md  transcript.json  writes.json
spikes/settings-ui/liveness/: Cargo.toml
spikes/settings-ui/liveness/src/: main.rs
wire/: WIRE-PROTOCOL.md
