[workspace]
resolver = "2"
members = [
    "crates/pf-wire",
    "crates/pocketforge",
    "crates/libpocketforge",
    "crates/pf-broker-ref",
    "crates/pf-input-broker",
]

# Shared metadata for every crate in the runtime workspace (tsp-e1b.2 / E2).
[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/pocketforge-os/runtime"
authors = ["PocketForge <noreply@pocketforge.os>"]

[workspace.dependencies]
pf-wire = { path = "crates/pf-wire", version = "0.0.1" }
pocketforge = { path = "crates/pocketforge", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# libc: ONLY the pf-input-broker daemon links it — it is privileged OS code (evdev/uinput
# ioctls, SCM_RIGHTS). The wire/facade crates stay dependency-light; this is the one place
# raw syscalls are unavoidable, and libc gives the correct struct layouts + ioctl FFI.
libc = "0.2"

# A release profile that prefers determinism + small daemons (E2 ships privileged
# broker code; the ABI/wire are the contract, not the binary size, but keep it lean).
[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1
panic = "abort"
